--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/curs
 spring.datasource.username=root  
 spring.datasource.password=Zakazaka12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.port=8080
 #spring.jpa.show-sql: true
